--- a/Desktop/Project/index.html
+++ b/Desktop/Project/index.html
@@ -99,7 +99,17 @@
     <div class="text"></div>
 </div>
 
+<script>
+    let btn = document.querySelector("#btn");
+    let sidebar = document.querySelector(".sidebar");
+        let sidebarbtn = document.querySelector(".bx bx-search");
 
+btn.onclick = function() {
+sidebar.classList.toggle("active");
+}
+sidebarbtn.onclick = function() {
+sidebar.classList.toggle("active");
+}
 </script>
 </body>
 </html>
